--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,15 @@
             "<node_internals>/**"
          ],
          "program": "${workspaceFolder}/src/index.js"
+      },
+      {
+         "type": "node",
+         "request": "launch",
+         "name": "模块遍历",
+         "skipFiles": [
+            "<node_internals>/**"
+         ],
+         "program": "${workspaceFolder}/src/plugin/tranverse-modules/index.js"
       }
    ]
 }
